# rustlings

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .replit  Cargo.toml  DEPLOY.md  DESIGN-ANALYSIS-2026.md  Dockerfile  PLAN-DORABOTKI-CODE.md  PLAN-DORABOTKI-ZADACHI.md  PLAN-DORABOTKI.md  PLAN-NEOBYASNENNYE-SIMVOLY.md  PLAN-PROEKT-RUSTLINGS.md  PLAN-TESTY-QUIZ.md  PLAN-WEB3.md  README.md  REPLIT.md  TEXTBOOK-AUDIT.md  analyze_textbook.py  fly.toml  package-lock.json  package.json  replit.nix
scripts/: create-main.js  extract-data.js  fix-json-quotes.js  inject-loader.js  remove-embedded.js
src/: main.rs
static/: index.html  manifest.json  style.css  sw.js
static/data/: achievements.json  daily-quests.json  first-projects.json  lesson-parts.json  lessons.json  part-quizzes.json  textbook-parts.json  textbook.json
static/data/tasks/: part-1-tasks.json  part-10-tasks.json  part-11-tasks.json  part-2-tasks.json  part-3-tasks.json  part-4-tasks.json  part-5-tasks.json  part-6-tasks.json  part-7-tasks.json  part-8-tasks.json  part-9-tasks.json
static/js/: a11y.js  chapter.js  data.js  editor.js  i18n.js  lesson.js  main.js  notify.js  quiz.js  state.js  utils.js
static/js/views/: achievements.js  dashboard.js  first-project.js  lessons.js  practice.js  textbook.js  why-rust.js
