# =============================================================================
# CARGO.TOML — это "меню" твоего проекта на Rust.
# Здесь мы говорим: как называется проект, какая версия, и КАКИЕ БИБЛИОТЕКИ
# (crate) нам нужны. Cargo сам скачает их из интернета при первой сборке.
# =============================================================================

[package]
name = "rustlings"
version = "0.1.0"
edition = "2021"

# -----------------------------------------------------------------------------
# [dependencies] — список библиотек (crates), которые использует наш код.
# Когда мы пишем в коде "use axum::...", эта библиотека должна быть здесь.
# -----------------------------------------------------------------------------
[dependencies]
# Веб-сервер на Rust: принимает запросы по HTTP и отдаёт ответы.
axum = "0.7"
# Асинхронный "движок" — чтобы сервер мог обслуживать много людей одновременно,
# не блокируясь. "full" = включаем все нужные возможности tokio.
tokio = { version = "1", features = ["full"] }
# Дополнительные возможности для HTTP: раздача файлов (папка static).
tower-http = { version = "0.5", features = ["fs"] }
# Сериализация: превращать структуры Rust в JSON и обратно.
serde = { version = "1", features = ["derive"] }
# Работа с JSON-строками (сериализация/десериализация).
serde_json = "1"
