# =============================================================================
# CARGO.TOML — это "меню" твоего проекта на Rust.
# Здесь мы говорим: как называется проект, какая версия, и КАКИЕ БИБЛИОТЕКИ
# (crate) нам нужны. Cargo сам скачает их из интернета при первой сборке.
# =============================================================================

[package]
name = "rustlings"
version = "0.1.0"
edition = "2021"

# -----------------------------------------------------------------------------
# [dependencies] — список библиотек (crates), которые использует наш код.
# Когда мы пишем в коде "use axum::...", эта библиотека должна быть здесь.
# -----------------------------------------------------------------------------
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
